--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "chat.tools.terminal.autoApprove": {
         "npx tsc": true,
-        "true": true
+        "true": true,
+        "timeout": true,
+        "pkill": true
     }
 }
